--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -7,12 +7,17 @@ pipeline{
             // Run Maven on a Unix agent
             sh "./mvnw clean install"
             }
-            }
+     }
 			
      stage("Deploy"){
        steps{
           deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://ec2-13-48-30-64.eu-north-1.compute.amazonaws.com:8080')], contextPath: null, onFailure: false, war: '**/*.war'
             }
           }
+     post { 
+        always { 
+            cleanWs()
         }
-      }
+     }
+  }
+}
