--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -4,7 +4,6 @@ pipeline{
   stages{
      stage("Build"){
        steps{       
-            cleanWs()
 	    // Run Maven on a Unix agent
             sh "./mvnw clean install"
             }
@@ -15,5 +14,10 @@ pipeline{
           deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://ec2-13-53-175-19.eu-north-1.compute.amazonaws.com:8080')], contextPath: null, onFailure: false, war: '**/*.war'
        }
      }
+    post { 
+        always { 
+            cleanWs()
+        }
+    }
   }
 }  
