--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline{
 			
      stage("Deploy"){
        steps{
-          deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://ec2-13-53-175-19.eu-north-1.compute.amazonaws.com:8080')], contextPath: null, onFailure: false, war: '**/*.war'
+          deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://13.51.194.48:8080')], contextPath: null, onFailure: false, war: '**/*.war'
        }
        post { 
         always { 
