--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         		<artifactId>maven-war-plugin</artifactId>
         		<version>2.3</version>
         		<configuration>
-          		<warName>${artifact.id}##${maven.build.timestamp}</warName>
+          		<warName>dptweb##${maven.build.timestamp}</warName>
         </configuration>
       </plugin>
 		</plugins>
