--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -13,11 +13,11 @@ pipeline{
        steps{
           deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://13.51.194.48:8080')], contextPath: null, onFailure: false, war: '**/*.war'
        }
-       post { 
-        always { 
-            cleanWs()
-        }
-       }
+#       post { 
+#        always { 
+#            cleanWs()
+#        }
+#       }
     }
   }
 }  
