--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		 <finalName>dptweb##${project.version}</finalName>
+		 <finalName>${project.artifactId}##${project.version}</finalName>
 	</build>
 	<distributionManagement>
     <repository>
