--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.devopsrealtime</groupId>
 	<artifactId>dptweb</artifactId>
-	<version>2.1/version>
+	<version>2.1<version>
 	<packaging>war</packaging>
 	<name>dptweb</name>
 	<description>DPT DevOps project for Spring Boot</description>
