--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+            	<groupId>org.apache.tomcat.maven</groupId>
+            	<artifactId>tomcat7-maven-plugin</artifactId>
+            	<version>2.2</version>
+            	<configuration>
+                <path>/${project.artifactId}##${project.version}</path>
+                <update>true</update>
+            </configuration>
+        </plugin>
+
 		</plugins>
-		 <finalName>${project.artifactId}##${project.version}</finalName>
+		<!-- <finalName>${project.artifactId}##${project.version}</finalName> -->
 	</build>
 	<distributionManagement>
     <repository>
