--- a/pom.xml
+++ b/pom.xml
@@ -66,18 +66,29 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<plugin>
-            	<groupId>org.apache.tomcat.maven</groupId>
-            	<artifactId>tomcat7-maven-plugin</artifactId>
-            	<version>2.2</version>
-            	<configuration>
-                <path>/${project.artifactId}##${project.version}</path>
-                <update>true</update>
-            </configuration>
-        </plugin>
+			<<plugin>
+                <groupId>org.codehaus.cargo</groupId>
+                <artifactId>cargo-maven2-plugin</artifactId>
+                <version>1.8.3</version>
+                <configuration>
+                    <container>
+                        <containerId>tomcat9x</containerId>
+                        <type>embedded</type>
+                    </container>
+                    <deployables>
+                        <deployable>
+                            <type>war</type>
+                            <location>${project.build.directory}/${project.build.finalName}.war</location>
+                            <properties>
+                                <context>/</context>
+                            </properties>
+                        </deployable>
+                    </deployables>
+                </configuration>
+            </plugin>
 
 		</plugins>
-		<!-- <finalName>${project.artifactId}##${project.version}</finalName> -->
+		<finalName>${project.artifactId}##${project.version}</finalName> 
 	</build>
 	<distributionManagement>
     <repository>
