--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -9,10 +9,19 @@ pipeline{
             }
      }
 			
-     stage("Deploy"){
+     //stage("Deploy"){
+     //  steps{
+     //     deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://13.51.194.48:8080')], contextPath: null, onFailure: false, war: '**/*.war'
+     //  }
+
        steps{
-          deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://13.51.194.48:8080')], contextPath: null, onFailure: false, war: '**/*.war'
-       }
+          sshagent(['tomcat-server']) {
+          sh """
+          scp -o StrictHostKeyChecking=no target/myweb.war ubuntu@13.51.194.48:/opt/tomcat/webapps/
+          ssh ubuntu@13.51.194.48 /opt/tomcat/bin/shutdown.sh
+          ssh ubuntu@13.51.194.48 /opt/tomcat/bin/startup.sh
+           """
+
        post { 
         always { 
             cleanWs()
