--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline{
             }
      }
 			
-     //stage("Deploy"){
+     stage("Deploy"){
      //  steps{
      //     deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://13.51.194.48:8080')], contextPath: null, onFailure: false, war: '**/*.war'
      //  }
