--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline{
        steps{
           sshagent(['tomcat-server']) {
           sh """
-          scp -o StrictHostKeyChecking=no target/*.war ubuntu@13.51.194.48:/opt/tomcat/webapps/
+          scp -o StrictHostKeyChecking=no target/*.war ubuntu@13.51.194.48:/opt/tomcat/webapps
           ssh ubuntu@13.51.194.48 /opt/tomcat/bin/shutdown.sh
           ssh ubuntu@13.51.194.48 /opt/tomcat/bin/startup.sh
            """
