--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
             	<artifactId>tomcat7-maven-plugin</artifactId>
             	<version>2.2</version>
             	<configuration>
-                	<path>/${project.artifactId}##${maven.build.timestamp}</path>
+                	<path>${project.artifactId}##${maven.build.timestamp}</path>
 					<url>http://localhost:8080/manager/dptweb</url>
                 	<update>true</update>
             	</configuration>
