--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
             	<artifactId>tomcat7-maven-plugin</artifactId>
             	<version>2.2</version>
             	<configuration>
-                	<warName>${project.artifactId}##${maven.build.timestamp}</warName>
+                	<warName>${project.artifactId}##${project.version}</warName>
                 	<update>true</update>
             	</configuration>
         	 </plugin>
