--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -11,14 +11,14 @@ pipeline{
 			
      stage("Deploy"){
        steps{
-          deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://13.51.194.48:8080')], contextPath: null, onFailure: false, war: '**/*.war'
+          deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://13.53.41.132:8080')], contextPath: null, onFailure: false, war: '**/*.war'
        }
 
-       post { 
-          always { 
-            cleanWs()
-          }
-       }
+ //      post { 
+ //         always { 
+ //           cleanWs()
+ //         }
+ //      }
      }
   }  
 }    
