--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>dptweb</artifactId>
 	<version>2.2</version>
 	<packaging>war</packaging>
-	<name>dptweb</name>
+	<name>${project.artifactId}##${project.version}</name>
 	<description>DPT DevOps project for Spring Boot</description>
 
 	<properties>
@@ -65,16 +65,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-            	<artifactId>tomcat7-maven-plugin</artifactId>
-            	<version>2.2</version>
-            	<configuration>
-                	<warName>${project.artifactId}##${project.version}</warName>
-                	<update>true</update>
-            	</configuration>
-        	</plugin>
-
 		</plugins>
 		<!-- <finalName>${project.artifactId}##${project.version}</finalName>  -->
 	</build>
