--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>dptweb</artifactId>
 	<version>2.2</version>
 	<packaging>war</packaging>
-	<name>${project.artifactId}##${project.version}</name>
+	<name>dptweb</name>
 	<description>DPT DevOps project for Spring Boot</description>
 
 	<properties>
@@ -65,6 +65,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-war-plugin</artifactId>
+        		<version>2.3</version>
+        		<configuration>
+          			<warName>${project.artifactId}##${project.version}</warName>
+        		</configuration>
+      		</plugin>
+
 		</plugins>
 		<!-- <finalName>${project.artifactId}##${project.version}</finalName>  -->
 	</build>
