--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         		<artifactId>maven-war-plugin</artifactId>
         		<version>2.3</version>
         		<configuration>
-          			<warName>${project.artifactId}##${project.version}</warName>
+          			<warName>${project.artifactId}##${project.version}.war</warName>
         		</configuration>
       		</plugin>
 
