--- a/pom.xml
+++ b/pom.xml
@@ -66,15 +66,30 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<plugin>
-            	<groupId>org.apache.tomcat.maven</groupId>
-            	<artifactId>tomcat7-maven-plugin</artifactId>
-            	<version>2.2</version>
-            	<configuration>
-                	<path>/dptweb##${maven.build.timestamp}</path>
-                	<update>true</update>
-            	</configuration>
-        	</plugin>
+			<<plugin>
+                    <groupId>org.codehaus.cargo</groupId>
+                    <artifactId>cargo-maven2-plugin</artifactId>
+                    <configuration>
+                        <container>
+                            <containerId>tomcat7x</containerId>
+                            <zipUrlInstaller>
+                                <url>http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.35/bin/apache-tomcat-7.0.35.zip</url>
+                            </zipUrlInstaller>
+                        </container>
+                        <deployables>
+                            <deployable>
+                                <properties>
+                                    <context>${project.artifactId}##${project.version}</context>
+                                </properties>
+                            </deployable>
+                        </deployables>
+                        <configuration>
+                            <properties>
+                                <cargo.servlet.port>9080</cargo.servlet.port>
+                            </properties>
+                        </configuration>
+                    </configuration>
+            </plugin>
 
 		</plugins>
 		<!-- <finalName>${project.artifactId}##${project.version}</finalName>  -->
