--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -1,6 +1,12 @@
 pipeline{
   agent {label 'java'}
   
+  parameters { 
+     string(name: 'tomcat_1', defaultValue: '16.170.205.45', description: 'Tomcat Node-1')
+     string(name: 'tomcat_2', defaultValue: '16.171.16.116', description: 'Tomcat Node-2')
+    } 
+
+
   stages{
      stage("Build"){
        steps{       
@@ -9,25 +15,34 @@ pipeline{
             }
      }
 			
-//     stage("Deploy"){
-//       steps{
-//          deploy adapters: [tomcat9(credentialsId: 'jenkins-to-tomcat', path: '', url: 'http://13.53.41.132:8080')], contextPath: null, onFailure: false, war: '**/*.war'
-//       }
-      stage("Deploy"){
-       steps{
-          sshagent(['tomcat-server-stokgolm']) {
-          sh """
-          scp -o StrictHostKeyChecking=no target/*.war ubuntu@13.53.41.132:/opt/tomcat/webapps/
-          ssh ubuntu@13.53.41.132 /opt/tomcat/bin/shutdown.sh
-          ssh ubuntu@13.53.41.132 /opt/tomcat/bin/startup.sh
-           """
+     stage("Deploy"){
+       parallel{
+        stage ('Deploy to Tomcat Node-1'){ 
+          steps{
+             sshagent(['tomcat-server-stokgolm']) {
+             sh """
+             scp -o StrictHostKeyChecking=no target/*.war ubuntu@${params.tomcat_1}:/opt/tomcat/webapps
+             """
+             }
           }
-       } 
+        }
+
+        stage ('Deploy to Tomcat Node-2'){ 
+          steps{
+             sshagent(['tomcat-server-stokgolm']) {
+             sh """
+             scp -o StrictHostKeyChecking=no target/*.war ubuntu@${params.tomcat_2}:/opt/tomcat/webapps
+             """
+             }
+          }
+        }
+
        post { 
           always { 
             cleanWs()
           }
        }
-      }     
-  }  
-}    
+       }     
+     }  
+  }    
+} 
