--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -20,32 +20,28 @@ pipeline{
         stage ('Deploy to Tomcat Node-1'){ 
           steps{
              sshagent(['tomcat-server-stokgolm']) {
-             sh """
-             scp -o StrictHostKeyChecking=no target/*.war ubuntu@${params.tomcat_1}:/opt/tomcat/webapps
-             """
+             sh "scp -o StrictHostKeyChecking=no target/*.war ubuntu@${params.tomcat_1}:/opt/tomcat/webapps"
              }
        
-          post { 
-             always { 
-               cleanWs()
-             }
-          }
+//          post { 
+//             always { 
+//               cleanWs()
+//             }
+//          }
           }
         }
 
         stage ('Deploy to Tomcat Node-2'){ 
           steps{
              sshagent(['tomcat-server-stokgolm']) {
-             sh """
-             scp -o StrictHostKeyChecking=no target/*.war ubuntu@${params.tomcat_2}:/opt/tomcat/webapps
-             """
+             sh "scp -o StrictHostKeyChecking=no target/*.war ubuntu@${params.tomcat_2}:/opt/tomcat/webapps"
              }
          
-          post { 
-             always { 
-               cleanWs()
-             }
-          }
+//          post { 
+//             always { 
+//               cleanWs()
+//             }
+//          }
           }
         } 
        }     
