--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://userdb.ci9ttocer7qx.eu-north-1.rds.amazonaws.com:3306/UserDB
+spring.datasource.url = jdbc:mysql://mysql.c47d0hswm1yr.eu-west-3.rds.amazonaws.com:3306/UserDB
 
 # Username and password
 spring.datasource.username = admin
-spring.datasource.password = Admin123
+spring.datasource.password = o5NOiRQ80fKV
