--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url = jdbc:mysql://mysql.cruawvpngh1q.eu-west-2.rds.amazonaws.
 
 # Username and password
 spring.datasource.username = admin
-spring.datasource.password = x89hysVVZ1q4
+spring.datasource.password = vaUoGbXShPfo
